<resources>
    <string name="app_name">Modestie App</string>
    <string name="title_activity_login">Connexion</string>
    <string name="login_title_textview">Lali-ho !</string>
    <string name="login_instructions">Veuillez vous connecter ou créer un compte</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="remember_me_checkbox_text">Se souvenir de moi</string>
    <string name="auto_login_checkbox_text">Me connecter automatiquement</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_google_acct">Compte Google</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="action_sign_as_guest">Visiteur</string>
    <string name="action_to_website">modestie.fr</string>
    <string name="welcome">"Salutations "</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit faire plus de 5 caractères</string>
    <string name="login_wrong_credentials">Identifiant ou mot de passe incorrect</string>
    <string name="login_fatal">Erreur système</string>
    <string name="login_feedback_modestiefr_connection">Authentification…</string>
    <string name="login_feedback_modestiefr_check_registration">Vérification de votre personnage enregistré…</string>
    <string name="login_feedback_modestiefr_get_character">Récupération des données de votre personnage…</string>
    <string name="login_feedback_modestiefr_update_db">Mise à jour de la base de données…</string>
    <string name="login_feedback_modestiefr_finished">Terminé…</string>
    <string name="google_web_client_id">365459330234-pqqfb3tao35smkmg7bis5gdfnp1ssv06.apps.googleusercontent.com</string>
    <string name="characregist_frag1_title">Nous vous attendions !</string>
    <string name="characregist_frag1_instructions">Bienvenue ! Pour utiliser l\'application, il est nécéssaire d\'enregistrer un personnage.\n\nEnregistrons le vôtre.</string>
    <string name="characregist_frag1_fc_member_question">Question préalable : \nFaites vous partie de la compagnie libre ?</string>
    <string name="characregist_frag1_btn_q_yes">Oui</string>
    <string name="characregist_frag1_btn_q_no">Non</string>
    <string name="characregist_frag1_VIP_instructions">Veuillez entrer la clé d\'invitation qui vous a été donnée par le staff de Modestie</string>
    <string name="characregist_frag1_VIP_key_hint">Clé d\'invitation</string>
    <string name="characregist_frag1_btn_verify">OK</string>
    <string name="characregist_frag2_title">Vous êtes de la compagnie</string>
    <string name="characregist_frag2_instructions">Sélectionnez votre personnage :</string>
    <string name="characregist_frag2_2_title">Vous n\'êtes pas de la compagnie</string>
    <string name="characregist_frag2_2_instructions">Quel est votre personnage ?</string>
    <string name="characregist_frag2_2_search_field_label">Nom</string>
    <string name="characregist_frag2_2_search_placeholder_instruction">Cherchez votre personnage dans le champ ci-dessus</string>
    <string name="characregist_frag3_title">Vérification</string>
    <string name="characregist_frag3_instructions">Nos mogs secrétaires vont vérifier que ce personnage vous appartient, puis l\'enregistrer.</string>
    <string name="characregist_frag3_step1">1. Copiez cette clé dans la description de votre profil Lodestone</string>
    <string name="characregist_frag3_step2">2. Cliquez ensuite sur \"Enregistrement\" pour faire vérifier votre personnage</string>
    <string name="characregist_frag3_open_lodestone">Profil Lodestone</string>
    <string name="characregist_frag3_verify_action">Enregistrement</string>
    <string name="characregist_frag4_title">Et voilà !</string>
    <string name="characregist_frag4_instructions">Votre personnage est enregistré !\n\nVous pouvez maintenant utiliser l\'application.</string>
    <string name="characregist_frag4_endBtn">Terminer</string>
    <string name="title_activity_home">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Modestie App</string>
    <string name="nav_header_subtitle">www.modestie.fr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_night_mode">Mode nuit</string>
    <string name="free_company_name">Compagnie</string>
    <string name="free_company_sigle">«Sigle»</string>
    <string name="slogan">Slogan</string>
    <string name="formationDate">Date de formation</string>
    <string name="member_count_title">Membres</string>
    <string name="member_count">xx</string>
    <string name="rank_title">Rang</string>
    <string name="rank">xx</string>
    <string name="grandcompany_title">Réputation</string>
    <string name="grandcompany_name">Compagnie</string>
    <string name="grandcompany_rank">Rang</string>
    <string name="grandcompany_progress">xxx%</string>
    <string name="ranking_title">Classements</string>
    <string name="ranking_monthly_title">Mensuel</string>
    <string name="ranking_monthly">xxe</string>
    <string name="ranking_weekly_title">Hebdomadaire</string>
    <string name="ranking_weekly">xxe</string>
    <string name="gc_maelstrom_name">Maelstrom</string>
    <string name="gc_flames_name">Immortels</string>
    <string name="gc_adders_name">Ordre des Deux Viperes</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_members">Membres</string>
    <string name="menu_events">Events</string>
    <string name="menu_tools">Outils</string>
    <string name="menu_share">Partager</string>
    <string name="title_members_list_activity">Membres</string>
    <string name="title_character_activity">Personnage</string>
    <string name="title_attributes">Caractéristiques</string>
    <string name="title_offensive_props">Attributs offensifs</string>
    <string name="title_defensive_props">Attributs défensifs</string>
    <string name="title_physical_props">Attributs physiques</string>
    <string name="title_mental_props">Attributs magiques</string>
    <string name="title_role_props">Rôle</string>
    <string name="title_crafting_props">Artisanat</string>
    <string name="attr_empty">---</string>
    <string name="title_event_list_activity">Events</string>
    <string name="ext_fab_add_event">Événement</string>
    <string name="no_event">Aucun événement en cours…</string>
    <string name="no_event_user">Ce n\'est pas très actif par ici…\nEt si vous créiez un événement ?</string>
    <string name="event_participation_feedback">Vous participez</string>
    <string name="event_full_feedback">Complet</string>
    <string name="event_self_promoter_feedback">Vous êtes l\'organisateur</string>
    <string name="event_description_null">Pas de description</string>
    <string name="button_cancel_participation">Annuler</string>
    <string name="action_new_event">Créer un événement</string>
    <string name="action_refresh">Rafraichir</string>
    <string name="title_event_details_dialog_fragment">Détails de l\'événement</string>
    <string name="event_promoter_details_text_view">organise cet événement</string>
    <string name="event_connected_promoter_details_text_view">Vous organisez cet événement</string>
    <string name="event_promoter_is_participating_details">organise et participe à cet événement</string>
    <string name="event_connected_promoter_is_participating_details">Vous organisez et participez à cet événement</string>
    <string name="event_attribute_participations_details">participation</string>
    <string name="event_attribute_participations_plural_details">participations</string>
    <string name="event_attribute_participations_unlimited_details">Participations illimitées</string>
    <string name="event_attribute_participations_no_participation_details">Aucune participation</string>
    <string name="event_attribute_prices">1 récompense</string>
    <string name="event_attribute_prices_plural">récompenses</string>
    <string name="event_attribute_prices_no_price">Aucune récompense</string>
    <string name="action_edit_event">Modifier</string>
    <string name="button_participate">Participer</string>
    <string name="button_withdraw">Ne plus participer</string>
    <string name="snackbar_message_event_full">Désole, c\'est complet !</string>
    <string name="title_new_event_activity">Nouvel événement</string>
    <string name="title_event_modification_activity">Modification événement</string>
    <string name="action_save_event">Enregistrer</string>
    <string name="event_sending">Envoi en cours</string>
    <string name="form_required">*requis</string>
    <string name="form_too_few_participants">Au moins 2 participants requis</string>
    <string name="form_event_name">Nom de l\'événement</string>
    <string name="form_event_date">Date</string>
    <string name="form_event_date_helper">jj/mm/aaaa *requis</string>
    <string name="form_event_hour">Heure</string>
    <string name="form_event_max_participants">Participants max</string>
    <string name="form_event_max_participants_error">Les participations ne peuvent excéder</string>
    <string name="form_event_promoter_participant">Je participe à l\'événement</string>
    <string name="form_event_description">Description</string>
    <string name="form_event_image">Image</string>
    <string name="form_participations_type_0">Illimitées</string>
    <string name="form_participations_type_1">Limitées</string>
    <string name="form_general_label">Général</string>
    <string name="form_participations_type_label">Participations</string>
    <string name="form_details_label">Détails</string>
    <string name="form_prices_label">Récompenses</string>
    <string name="form_management_label">Gestion</string>
    <string name="form_image_preview_text">Prévisualisation :</string>
    <string name="button_remove_image">Supprimer l\'image</string>
    <string name="button_add_price">Ajouter</string>
    <string name="action_delete_price">Supprimer</string>
    <string name="menu_new_price_option_gils">Gils</string>
    <string name="menu_new_price_option_item">Item</string>
    <string name="title_edit_price_dialogfrag">Modification du prix</string>
    <string name="price_type_radiogroup_label">Type de récompense</string>
    <string name="gils_price_type">Gils</string>
    <string name="item_price_type">Item</string>
    <string name="price_attributes_label">Attributs</string>
    <string name="attribute_item_field_label">Item</string>
    <string name="attribute_quantity_field_label">Quantité</string>
    <string name="quantity_field_error">La quantité ne peut excéder</string>
    <string name="item_search_field_label">Recherche</string>
    <string name="item_search_placeholder_instruction">Effectuez une recherche d\'item dans le champ ci-dessus</string>
    <string name="item_search_placeholder_no_result">Aucun résultat</string>
    <string name="item_search_placeholder_error_code">Une erreur réseau est survenue, impossible de récupérer les données</string>
    <string name="item_search_placeholder_error">Une erreur inconnue est survenue, impossible de récupérer les données</string>
    <string name="image_upload_error_dialog_title">Échec upload image</string>
    <string name="image_upload_error_dialog_message">Le téléversement de votre image n\'a pas fonctionné, continuer la mise en ligne de votre événement sans illustration ? Une image par défaut sera utilisée.</string>
    <string name="image_upload_error_dialog_pos_btn">Continuer</string>
    <string name="image_upload_error_dialog_neg_btn">Annuler</string>
    <string name="button_delete_event">Supprimer l\'événement</string>
</resources>