<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NewEventActivity"
    tools:showIn="@layout/activity_new_event"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FormEventName"
            style="@style/EditTextFilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_event_name"
            app:helperText="@string/form_required"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_clear_white_24dp"
            android:textCursorDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FormEventDate"
                style="@style/EditTextFilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/form_event_date"
                android:layout_weight="1"
                app:startIconDrawable="@drawable/ic_event_white_24dp"
                app:helperText="@string/form_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FormEventTime"
                style="@style/EditTextFilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/form_event_hour"
                android:layout_weight="1.25"
                app:startIconDrawable="@drawable/ic_alarm_white_24dp"
                app:helperText="@string/form_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FormEventDescription"
            style="@style/EditTextFilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/form_event_description"
            android:textCursorDrawable="@null"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_clear_white_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>